# csv-metrics-analyzer

./: .gitignore  README.md  pyproject.toml
data/: sample_tickets.csv
src/csv_analyzer/: cli.py  loader.py  metrics.py  output.py
tests/: test_loader.py  test_metrics.py  test_output.py
