[project]
name = "csv-metrics-analyzer"
version = "0.1.0"
description = "Analizador de indicadores operativos a partir de un CSV de tickets"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
csv-analyzer = "csv_analizer.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
